Measure Fix v3 z-index

--- a/style/mediaQueries/about-me-section.css
+++ b/style/mediaQueries/about-me-section.css
@@ -17,6 +17,7 @@
 
 @media screen and (max-width: 480px) {
   .about-me-section {
+    z-index: 200;
     height: 100%;
     margin-top: -250px;
   }
